--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "luxon": "^3.4.0",
     "mongoose": "^7.4.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "pug": "2.0.0-beta11",
     "serve-favicon": "^2.5.0"
   },
