--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serverstart": "DEBUG=inventory-application:* npm run devstart"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
